@@ -469,13 +469,13 @@ def like_op(a, b, escape=None):
     return a.like(b, escape=escape)
 
 def notlike_op(a, b, escape=None):
-    raise NotImplementedError()
+    return ~a.like(b, escape=escape)
 
 def ilike_op(a, b, escape=None):
     return a.ilike(b, escape=escape)
 
 def notilike_op(a, b, escape=None):
-    raise NotImplementedError()
+    return ~a.ilike(b, escape=escape)
 
 def between_op(a, b, c):
     return a.between(b, c)
@@ -484,7 +484,7 @@ def in_op(a, b):
     return a.in_(b)
 
 def notin_op(a, b):
-    raise NotImplementedError()
+    return ~a.in_(b)
 
 def distinct_op(a):
     return a.distinct()
